--- a/style.css
+++ b/style.css
@@ -39,3 +39,10 @@ p {
 	background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
 	background-color: #f6f6f6;
 }
+
+@media (max-width: 600px) {
+  .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
