--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ p {
 	
 }
 
+header{
+  display: flex;
+  flex-direction: colum;
+  width: 100%;
+  background-color: blue;
+  min-hieght: 500px;
+  color: #fff;
+  justify-content: center; 
+  align-item: center;
+}
+
 .wrapper {
     text-align: center;
 }
