--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 p {
 	color: #f3f3f3;
-	font-size: 20px;
+	font-size: 35px;
 	
 }
 
@@ -44,7 +44,7 @@ header{
 	padding: 12px 24px;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #ffffff;
-	position: absolute;
+	position: center;
     top: 50%;
 }
 .button:hover {
