Adding CSS to P

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
 p {
 	color: #f3f3f3;
 	font-size: 35px;
+	position: center;
+	font-weight: bold;
+	padding: 12px 24px;
+	text-decoration: none;
+	position: center;
 	
 }
 
