--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ p2 {
 	font-size: 25px;
 	position: center;
 	font-weight: bold;
-	padding: 12px 100px;
+	padding: px 8px;
 	text-decoration: none;
-	position: absolute;
+	position: center;
 	
 }
 
