--- a/loginhold.css
+++ b/loginhold.css
@@ -3,7 +3,7 @@
 
 
 body {
-	background: #67CFAC;
+	background: #F3F3F3;
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -12,19 +12,47 @@ html {
 }
 
 img{
-	padding: 60px 40px;
+	padding: 10px 40px;
 	position: center;
 	justify-item: center;
+	background-color: #67CFAC;
 }
 
 header{
   display: flex;
   flex-direction: colum;
-  font-size: 40px;
+  font-size: 25px;
   width: 100%;
   min-hieght: 500px;
-  color: #fff;
+  color: #67CFAC;
   justify-content: center; 
   align-item: center;
-  margin-bottom: 80px;
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+
+p{
+  display: flex;
+  flex-direction: colum;
+  font-size: 25px;
+  width: 100%;
+  min-hieght: 500px;
+  color: #67CFAC;
+  justify-content: center; 
+  align-item: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+
+p2{
+  display: flex;
+  flex-direction: colum;
+  font-size: 25px;
+  width: 100%;
+  min-hieght: 500px;
+  color: #707070;
+  justify-content: center; 
+  align-item: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
 }
