--- a/style.css
+++ b/style.css
@@ -54,15 +54,18 @@ header{
 	border: 1px solid #dcdcdc;
 	display: inline-block;
 	cursor: pointer;
+	padding: 12px 24px;
+	position: center;
+    top: 50%;
+}
+
+.button a {
 	color: #707070;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 40px;
 	font-weight: bold;
-	padding: 12px 24px;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #ffffff;
-	position: center;
-    top: 50%;
 }
 .button:hover {
 	background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
