--- a/loginhold.css
+++ b/loginhold.css
@@ -55,4 +55,44 @@ p2{
   align-item: center;
   margin-top: 0px;
   margin-bottom: 40px;
+  text-decoration: none;
+}
+
+p2 a{
+  display: flex;
+  flex-direction: colum;
+  font-size: 25px;
+  width: 100%;
+  min-hieght: 500px;
+  color: #707070;
+  justify-content: center; 
+  align-item: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
+  text-decoration: none;
+}
+
+.button {
+	box-shadow: inset 0px 1px 0px 0px #67CFAC;
+	background: linear-gradient(to bottom, #67CFAC 5%, #67CFAC 100%);
+	background-color: #67CFAC;
+	border-radius: 6px;
+	border: 1px solid #dcdcdc;
+	display: inline-block;
+	cursor: pointer;
+	padding: 12px 24px;
+	position: center;
+    top: 50%;
+}
+
+.button a {
+	color: #FFFFFF;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 25px;
+	text-decoration: none;
+	text-shadow: 0px 1px 0px ;
+}
+.button:hover {
+	background: linear-gradient(to bottom, #67CFAC 5%, #67CFAC 100%);
+	background-color: #67CFAC;
 }
