--- a/loginhold.css
+++ b/loginhold.css
@@ -31,6 +31,11 @@ header{
   margin-bottom: 40px;
 }
 
+.wrapper {
+    float: center;
+	
+}
+
 p{
   display: flex;
   flex-direction: colum;
@@ -41,58 +46,61 @@ p{
   justify-content: center; 
   align-item: center;
   margin-top: 0px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 p2{
-  display: flex;
-  flex-direction: colum;
-  font-size: 25px;
+  font-size: 16px;
   width: 100%;
   min-hieght: 500px;
   color: #707070;
-  justify-content: center; 
-  align-item: center;
+  text-align: left;
+  margin-left: 35px;
   margin-top: 0px;
   margin-bottom: 40px;
   text-decoration: none;
 }
 
-p2 a{
-  display: flex;
-  flex-direction: colum;
-  font-size: 25px;
+p3{
+  font-size: 16px;
   width: 100%;
   min-hieght: 500px;
   color: #707070;
-  justify-content: center; 
-  align-item: center;
+  text-align: right;
+  margin-left: 260px;
   margin-top: 0px;
   margin-bottom: 40px;
   text-decoration: none;
 }
 
-.button {
-	box-shadow: inset 0px 1px 0px 0px #67CFAC;
-	background: linear-gradient(to bottom, #67CFAC 5%, #67CFAC 100%);
-	background-color: #67CFAC;
-	border-radius: 6px;
-	border: 1px solid #dcdcdc;
-	display: inline-block;
-	cursor: pointer;
-	padding: 12px 24px;
-	position: center;
-    top: 50%;
+p4{
+  font-size: 35px;
+  width: 100%;
+  min-hieght: 500px;
+  color: #67CFAC;
+  text-align: right;
+  margin-left: 120px;
+  text-decoration: none;
 }
 
-.button a {
-	color: #FFFFFF;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 25px;
-	text-decoration: none;
-	text-shadow: 0px 1px 0px ;
+p5{
+  font-size: 25px;
+  width: 100%;
+  min-hieght: 500px;
+  color: #707070;
+  text-align: right;
+  margin-left: 55px;
+  text-decoration: none;
 }
-.button:hover {
-	background: linear-gradient(to bottom, #67CFAC 5%, #67CFAC 100%);
-	background-color: #67CFAC;
+
+a{
+  text-decoration: none;
+}
+
+.pin{
+  justify-content: center; 
+  align-item: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
+  margin-left: 90px;
 }
