--- a/style.css
+++ b/style.css
@@ -23,6 +23,21 @@ p {
 	text-align: left;
 }
 
+p2{
+  color: #f3f3f3;
+	font-size: 14px;
+	position: center;
+	padding: 25px 8px;
+	text-decoration: none;
+	justify-content: center;
+	margin: 0px 96px;
+	text-align: left;
+}
+
+a{
+  text-decoration: none;
+}
+
 img{
 	padding: 60px 40px;
 	position: center;
