--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 p {
-	color: #f3f3f3;
+	color: #F3F3F3;
 	font-size: 14px;
 	position: center;
 	font-weight: bold;
@@ -24,7 +24,7 @@ p {
 }
 
 p2{
-  color: #f3f3f3;
+    color: #F3F3F3;
 	font-size: 14px;
 	position: center;
 	padding: 25px 8px;
@@ -50,7 +50,7 @@ header{
   font-size: 40px;
   width: 100%;
   min-hieght: 500px;
-  color: #fff;
+  color: #FFFFFF;
   justify-content: center; 
   align-item: center;
   margin-bottom: 80px;
@@ -62,9 +62,9 @@ header{
 }
 
 .button {
-	box-shadow: inset 0px 1px 0px 0px #ffffff;
-	background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-	background-color: #ffffff;
+	box-shadow: inset 0px 1px 0px 0px #FFFFFF;
+	background: linear-gradient(to bottom, #FFFFFF 5%, #f6f6f6 100%);
+	background-color: #FFFFFF;
 	border-radius: 6px;
 	border: 1px solid #dcdcdc;
 	display: inline-block;
@@ -80,11 +80,11 @@ header{
 	font-size: 40px;
 	font-weight: bold;
 	text-decoration: none;
-	text-shadow: 0px 1px 0px #ffffff;
+	text-shadow: 0px 1px 0px #F3F3F3;
 }
 .button:hover {
-	background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-	background-color: #f6f6f6;
+	background: linear-gradient(to bottom, #F3F3F3 5%, #F3F3F3 100%);
+	background-color: #F3F3F3;
 }
 
 @media (max-width: 400px) {
