--- a/multikeyslideshow.css
+++ b/multikeyslideshow.css
@@ -2,9 +2,24 @@
 /* CSS Document */
 
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
+body {
+	background: #F3F3F3;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.Slides {display: none}
 img {vertical-align: middle;}
+
+
+html {
+	height: 100%;
+}
+
+
+.wrapper {
+    float: center;
+	
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -19,11 +34,11 @@ img {vertical-align: middle;}
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px;
+  padding: 16px 14px;;
   margin-top: -22px;
-  color: white;
+  color: #67CFAC;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -37,23 +52,14 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  color: #ED6B86;
+
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #FFFFFF;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -63,17 +69,19 @@ img {vertical-align: middle;}
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  width: 20px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #67CFAC;
   border-radius: 50%;
   display: inline-block;
+  opacity: 0.5;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #ED6B86;
+  opacity: 1;
 }
 
 /* Fading animation */
