--- a/multikeyslideshow.css
+++ b/multikeyslideshow.css
@@ -17,15 +17,15 @@ html {
 
 
 .wrapper {
-    float: center;
-	
+    float: center;	
 }
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 500px;
   position: relative;
   margin: auto;
+	margin-bottom: 20px;
 }
 
 /* Next & previous buttons */
@@ -34,36 +34,24 @@ html {
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px 14px;;
+  padding: 16px 5px;;
   margin-top: -22px;
   color: #67CFAC;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 60px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   color: #ED6B86;
 
-}
-
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #FFFFFF;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
 }
 
 /* The dots/bullets/indicators */
