--- a/menu4.css
+++ b/menu4.css
@@ -17,6 +17,9 @@ body {
 
 	/* Selve menu linjen */
 nav { 
+		left: 0;
+   		top: 0;
+   		width: 100%;
 		display: flex;
 		background-color: #67CFAC;
 		height: 60px;		
@@ -206,7 +209,7 @@ a:hover {
 		position: absolute;
 		top: 50%;
 		width: auto;
-		padding: 5px 5px;
+		padding: 0px 5px;
 		color: #67CFAC;
 		font-weight: bold;
 		transition: 0.6s ease;
@@ -260,16 +263,26 @@ a:hover {
 		}
 
 
-footer {
+.footer {
    		position: fixed;
    		left: 0;
    		bottom: 0;
    		width: 100%;
-		height: 50px;
+		height: 60px;
    		background-color: #67CFAC;
-   		color: white;
    		text-align: center;
-}
+		}
+
+.logo img {
+		
+		
+		position: relative;
+		z-index: 1;
+		width: auto;
+		height: 40px;
+		margin-top: 10px;
+   		text-align: center;
+		}
 
 	/* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
