--- a/signup3-style.css
+++ b/signup3-style.css
@@ -17,7 +17,7 @@ body {
   	font-family: 'Source Sans Pro', sans-serif;
   	padding: 10px 15px;
   	width: 95%;
-	height: 90%;
+	height: auto;
   	min-width: 300px;
 }
 
@@ -127,6 +127,9 @@ p4 {
 .container {
 	display: inline-flex;
 	overflow: auto;
+	bottom: 5px;
+	position: fixed;
+	text-align:center;
 }
 
 button {
@@ -141,9 +144,7 @@ button {
 	border-radius: 3px;
 	cursor: pointer;
 	padding: 10px 5px;
-	margin-top: 0px;
-	margin-left: 15px;
-	bottom: 0;
+	margin-left: 18px;
 }
 
 button :hover {
@@ -153,19 +154,28 @@ button :hover {
 
 .steps {
 	text-align:center;
-	margin-top:20px;
-	margin-bottom: 20px;
+	
 }
 /* Make circles that indicate the steps of the form: */
 .step {
-	height: 20px;
-	width: 20px;
-	margin: 0 2px;
+	height: 40px;
+	width: 40px;
+	margin: 0 0px;
 	background-color: #67CFAC;
 	border: none;  
-	border-radius: 0%;
+	border-radius: 50%;
+	margin-top:10px;
+	margin-bottom: 20px;
 	display: inline-block;
 	opacity: 0.5;
+	text-align: center;
+}
+
+.step p {
+	font-size: 18px;
+	line-height: 1;
+	color: #ffffff;
+	text-align: center;
 }
 
 .step.active {
