--- a/signup3-style.css
+++ b/signup3-style.css
@@ -8,6 +8,8 @@
 body {
   	font-family: 'Source Sans Pro', sans-serif;
 	background-color: #f3f3f3;
+	margin: 0;
+  	padding: 0;
 	}
 
 
@@ -16,7 +18,7 @@ body {
  	margin: 10px auto;
   	font-family: 'Source Sans Pro', sans-serif;
   	padding: 10px 15px;
-  	width: 95%;
+  	width: 90%;
 	height: auto;
   	min-width: 300px;
 }
@@ -37,7 +39,7 @@ body {
 	color: #67CFAC;
 	margin-top: 0px;
 	margin-bottom: 10px;
-  	margin-left: 5px;
+  	margin-left: 15px;
 }
 .subtitle {
 	font-weight: normal;
@@ -45,25 +47,24 @@ body {
 	text-align: left;
 	color: #707070;
 	margin-bottom: 15px;
- 	margin-left: 5px;
+ 	margin-left: 15px;
 }
 	
 b {
 	font-size: 12px;
 	line-height: 0.5;
 	text-transform: uppercase;
-	margin-left: 5px;
+	margin-left: 15px;
 	}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
-  	width: 100%;
+  	width: 98%;
   	padding: 12px;
-  	margin: 5px 0 5px 0;
+  	margin: 5px 5px 5px 5px;
   	display: inline-block;
 	border: 1px solid #67CFAC;
 	border-radius: 0px;
-	margin-bottom: 10px;
 	box-sizing: border-box;
 	color: #707070;
 	font-size: 12px;
@@ -103,6 +104,7 @@ p3 {
 	font-size: 12px;	
 	margin-bottom: 10px;
 	margin-left: 4%;
+	margin-right: 5px;
 	line-height: 1.3;
 	text-align: left;
 	float: left;
@@ -130,6 +132,7 @@ p4 {
 	bottom: 5px;
 	position: fixed;
 	text-align:center;
+	left: 4%;
 }
 
 button {
@@ -144,7 +147,7 @@ button {
 	border-radius: 3px;
 	cursor: pointer;
 	padding: 10px 5px;
-	margin-left: 18px;
+	margin-left: 15px;
 }
 
 button :hover {
@@ -153,19 +156,17 @@ button :hover {
 
 
 .steps {
-	text-align:center;
-	
+	text-align:center;	
 }
 /* Make circles that indicate the steps of the form: */
 .step {
 	height: 40px;
 	width: 40px;
-	margin: 0 0px;
 	background-color: #67CFAC;
 	border: none;  
 	border-radius: 50%;
-	margin-top:10px;
-	margin-bottom: 20px;
+	margin-top: 25px;
+	margin-bottom: 10px;
 	display: inline-block;
 	opacity: 0.5;
 	text-align: center;
@@ -196,7 +197,7 @@ button :hover {
 	height: 200px;
 	opacity: 1;
 	margin: 15%;
-	float: center;
+	justify-content: center;
 }
 
 .icon i {
