--- a/success-style.css
+++ b/success-style.css
@@ -5,97 +5,43 @@
 body {
 	background: #67CFAC;
 	font-family: 'Source Sans Pro', sans-serif;
+	margin: 0;
+  	padding: 0;
 }
 
 html {
 	height: 100%;
 }
 
+header{
+  	display: flex;
+  	flex-direction: colum;
+  	width: 100%;
+	margin-top: 40%;
+  	color: #67CFAC;
+  	justify-content: center; 
+  	align-item: center;
+  	margin-bottom: 40px;
+}
+
 img{
 	padding: 10px 40px;
-	top: 200px;
+	top: 40%;
 	justify-item: center;
 }
 
-header{
-  display: flex;
-  flex-direction: colum;
-  font-size: 25px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #67CFAC;
-  justify-content: center; 
-  align-item: center;
-  margin-top: 0px;
-  margin-bottom: 40px;
-}
-
-
-p{
-  display: flex;
-  flex-direction: colum;
-  font-size: 25px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #67CFAC;
-  justify-content: center; 
-  align-item: center;
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-p2{
-  font-size: 16px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #707070;
-  text-align: left;
-  margin-left: 35px;
-  margin-top: 0px;
-  margin-bottom: 40px;
-  text-decoration: none;
-}
-
-p3{
-  font-size: 16px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #707070;
-  text-align: right;
-  margin-left: 260px;
-  margin-top: 0px;
-  margin-bottom: 40px;
-  text-decoration: none;
-}
-
-p4{
-  font-size: 35px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #67CFAC;
-  text-align: right;
-  margin-left: 120px;
-  text-decoration: none;
+.wrapper {
+	justify-content: center;
+	text-align: center; 
+	margin-top: 30%;
 }
 
 p5{
-  font-size: 25px;
-  width: 100%;
-  min-hieght: 500px;
-  color: #707070;
-  text-align: right;
-  margin-left: 55px;
-  text-decoration: none;
+  	font-size: 30px;
+	font-weight: 600;
+  	color: #ffffff;
+  	text-align: center; 
 }
 
-a{
-  text-decoration: none;
-}
 
-.pin{
-  justify-content: center; 
-  align-item: center;
-  margin-top: 0px;
-  margin-bottom: 40px;
-  margin-left: 90px;
-}
+
