--- a/loading-style.css
+++ b/loading-style.css
@@ -17,7 +17,7 @@
 	width: 30px;
 	border-radius: 5px;
 	background-color: #67CFAC;
-	left: 100;
+	left: 120px;
 	transform: rotate(0deg);
 	transform-origin: 65px;
 	transition:background 1s, box-shadow 1s;
