--- a/signup3-style.css
+++ b/signup3-style.css
@@ -15,7 +15,7 @@ body {
 
 #regForm {
   	background-color: #ffffff;
- 	margin: 10px auto;
+ 	margin: 5px auto;
   	font-family: 'Source Sans Pro', sans-serif;
   	padding: 10px 15px;
   	width: 90%;
@@ -76,10 +76,10 @@ input[type=text]:focus, input[type=password]:focus {
   	outline:none;
 	}
 
-/* Mark input boxes that gets an error on validation: 
+/* Mark input boxes that gets an error on validation: */
 input.invalid {
   background-color: #F3F3F3;
-}*/
+}
 
 /* Hide all steps by default: */
 .tab {
@@ -89,13 +89,13 @@ input.invalid {
 /*flexbox omkring checkbox og tekstbox ud for*/
 .checkmark {
 	display:flex;
-	float: left;
+	margin-left: 1px;
 }
 
-.checkbox {
-	width: 12px; 
-	height: 12px; 
-	margin: 0px; 
+input[type=checkbox] {
+	width: 15px; 
+	height: 15px; 
+	background-color: aqua;
 	top: 5%;
 }
 
@@ -103,8 +103,8 @@ input.invalid {
 p3 {
 	font-size: 12px;	
 	margin-bottom: 10px;
-	margin-left: 4%;
 	margin-right: 5px;
+	margin-left: 5px;
 	line-height: 1.3;
 	text-align: left;
 	float: left;
@@ -127,15 +127,18 @@ p4 {
 
 /* Surrounding the buttons*/
 .container {
-	display: inline-flex;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
 	overflow: auto;
-	bottom: 5px;
+	justify-content: center;
+	align-items: center;
+	bottom: 10px;
 	position: fixed;
-	text-align:center;
-	left: 4%;
 }
 
-button {
+.container button {
+	text-align:center;
   	width: 150px;
 	background: #67CFAC;
  	font-size: 14px;
@@ -147,7 +150,7 @@ button {
 	border-radius: 3px;
 	cursor: pointer;
 	padding: 10px 5px;
-	margin-left: 15px;
+	margin: 0 15px;
 }
 
 button :hover {
@@ -215,3 +218,6 @@ button :hover {
 	z-index: 1;
 }
 
+@media screen {
+	
+}
