Better color to Add Key area

--- a/signup3-style.css
+++ b/signup3-style.css
@@ -195,7 +195,7 @@ button :hover {
 
 /* Flexbox around the square width the logo*/
 .box1 {
-	background-color: #67CFAC;
+	background-color: #B3E7D6;
 	width: 200px;
 	height: 200px;
 	opacity: 1;
