button added to succes page

--- a/success-style.css
+++ b/success-style.css
@@ -46,5 +46,12 @@ p5{
 	
 }
 
-
+p3{
+	font-size: 18px;
+	font-weight: 600;
+	text-transform: uppercase;
+  	text-align: center;
+  	text-decoration: none;
+	margin-top: 0%;
+}
 
