--- a/index-style.css
+++ b/index-style.css
@@ -13,51 +13,34 @@ html {
 	height: 100%;
 }
 
-p {
-	color: #F3F3F3;
-	font-size: 14px;
-	position: center;
-	font-weight: bold;
-	padding: 25px 8px;
-	text-decoration: none;
-	justify-content: center;
-	margin: 0px 96px;
-	text-align: left;
-}
-
-p2{
-    color: #F3F3F3;
-	font-size: 14px;
-	position: center;
-	padding: 25px 8px;
-	text-decoration: none;
-	justify-content: center;
-	margin: 0px 96px;
-	text-align: left;
-}
-
 a{
   text-decoration: none;
 }
 
 img{
 	padding-top: 20%;
-	position: center;
-	justify-item: center;
+	width: 90%;
 }
 
 header{
   	display: flex;
-  	flex-direction: colum;
   	font-size: 33px;
   	width: 100%;
   	color: #FFFFFF;
   	justify-content: center; 
-  	align-item: center;
 	margin-top: 20%;
   	margin-bottom: 20%;
 }
 
+.text2 {
+    color: #F3F3F3;
+	font-size: 14px;
+	padding: 25px 8px;
+	text-decoration: none;
+	justify-content: center;
+	margin: 0 28%;
+	text-align: left;
+}
 
 .wrapper {
     text-align: center;
@@ -68,11 +51,10 @@ header{
 	background: linear-gradient(to bottom, #FFFFFF 5%, #f6f6f6 100%);
 	background-color: #FFFFFF;
 	border-radius: 6px;
-	border: 1px solid #dcdcdc;
 	display: inline-block;
 	cursor: pointer;
 	padding: 12px 24px;
-	position: center;
+	text-align: center;
     top: 50%;
 }
 
@@ -81,6 +63,7 @@ header{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 40px;
 	font-weight: bold;
+	line-height: 1;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #F3F3F3;
 }
