--- a/signup3-style.css
+++ b/signup3-style.css
@@ -100,7 +100,7 @@ input[type=checkbox] {
 }
 
 /*tekstboks ved checkmark*/
-p3 {
+.text3 {
 	font-size: 12px;	
 	margin-bottom: 10px;
 	margin-right: 5px;
@@ -111,7 +111,7 @@ p3 {
 	}
 
 /*tekstboks - terms & conditions*/
-p4 {
+.text4 {
 	font-size: 10px;
 	font-style: italic;	
 	line-height: 1.3;
@@ -175,11 +175,12 @@ button :hover {
 	text-align: center;
 }
 
-.step p {
+.step {
 	font-size: 18px;
 	line-height: 1;
 	color: #ffffff;
 	text-align: center;
+	padding-top: 10px;
 }
 
 .step.active {
