--- a/index-style.css
+++ b/index-style.css
@@ -53,7 +53,7 @@ header{
 	border-radius: 6px;
 	display: inline-block;
 	cursor: pointer;
-	padding: 12px 24px;
+	padding: 8px 24px 20px 24px;
 	text-align: center;
     top: 50%;
 }
@@ -63,7 +63,7 @@ header{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 40px;
 	font-weight: bold;
-	line-height: 1;
+  	line-height: 1;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #F3F3F3;
 }
