--- a/success-style.css
+++ b/success-style.css
@@ -43,4 +43,9 @@ img{
 	
 }
 
-
+@media only screen and (max-width: 600px){
+  .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+		}
+}
